add template to add bg image

--- a/part1.html
+++ b/part1.html
@@ -18,6 +18,13 @@
         type: Phaser.AUTO,
         width: 800,
         height: 600,
+        physics: {
+            default: 'arcade',
+            arcade: {
+                gravity: {y:300},
+                debug: false
+            }
+        },
         scene: {
             preload: preload,
             create: create,
@@ -29,10 +36,12 @@
 
     function preload ()
     {
+        this.load.image('background', );
     }
 
     function create ()
     {
+        this.add.image(400, 300, 'background');
     }
 
     function update ()
