add example background image

--- a/part1.html
+++ b/part1.html
@@ -2,7 +2,6 @@
 <html lang="en"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Making your first Phaser 3 Game - Part 1</title>
     <script src="//cdn.jsdelivr.net/npm/phaser@3.1.1/dist/phaser.js"></script>
     <style type="text/css">
         body {
@@ -36,7 +35,7 @@
 
     function preload ()
     {
-        this.load.image('background', );
+        this.load.image('background', 'assets/sky.png');
     }
 
     function create ()
